--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "filehound": "^1.16.0",
     "highlight.js": "^9.10.0",
     "marked": "^0.3.6",
