--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "filehound": "^1.16.0",
+    "fs-extra": "^3.0.1",
     "highlight.js": "^9.10.0",
     "marked": "^0.3.6",
     "mkdirp": "^0.5.1",
